--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,13 @@
     font-size: 32px;
   }
 
+  .br-sp{
+    display: none;
+  }
+  .br-sp-none{
+      display: block;
+  }
+
 
   /* ======================================================
   セクション①
