--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,7 +11,10 @@
 
     .content{
         margin: 0 auto;
+        padding-top: 0;
+        padding-bottom: 0;
         text-align: center;
+        width: 80%;
         min-width: 280px;
     }
 
@@ -73,7 +76,31 @@
         width: 100%;
         /* height: 59%; */
     }
-    
+
+    .page-one{
+        /* background-image: url(../img/top1.png); */
+        background-image: none;
+    }
+    .page-two{
+        /* background-image: url(../img/top2.png); */
+        background-image: none;
+    }
+    .page-three{
+        /* background-image: url(../img/top3.png); */
+        background-image: none;
+    }
+    img.swiper-slide{
+        margin-top: 0;
+    }
+    .swiper-slide-res{
+        display: block;
+    }
+    /* .fview__btn{
+        visibility: hidden;
+    } */
+    .content{
+        height: 320px;
+    }
 }
 
 /* スマホ用レイアウト:680px以下 */
